fix background height issue on mobile devices

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,11 +1,12 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto|Roboto+Condensed&display=swap');
 
 body {
-  background: url(../images/yang.png) no-repeat center center fixed;
+  background: url(../images/yang.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  min-height: 100%;
   font-family: 'Roboto', sans-serif;
 }
 
